fixed VH4-103 Pricing page-desktop version-wrong font color was assigned

--- a/styles/pages/pricing.css
+++ b/styles/pages/pricing.css
@@ -25,7 +25,7 @@ header {
   text-align: center;
   font-size: 2rem;
   letter-spacing: -0.016rem;
-  color: var(--color-primary-pink);
+  color: var(--color-secondary-title-text);
 }
 
 .pricing-cards {
